--- a/css/index.css
+++ b/css/index.css
@@ -33,6 +33,7 @@ time, mark, audio, video {
   border: 0;
   font-size: 100%;
   font: inherit;
+  font-weight: 300;
   vertical-align: baseline;
 }
 
@@ -51,7 +52,7 @@ ol, ul {
 
 blockquote, q {
     quotes: none;
-  }
+}
   
   blockquote:before, blockquote:after,
   q:before, q:after {
@@ -123,18 +124,30 @@ blockquote, q {
     height: 1px;
     /* background: #c4e17f; */
     border-radius: 5px 5px 0 0;
-    /* background-image: -webkit-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
-    background-image: -moz-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
-    background-image: -o-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
-    background-image: linear-gradient(to right, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4); */
-  }
+   }
   
-  input {
+  input{
     font-family: inherit;
     color: inherit;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+  }
+
+  .alert{
+    background: #e44e4e;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    border:1px solid #b32929;
+  }
+
+  .alert-done{
+    background: #1c9626;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    border:1px solid #1c9626;
   }
   
   .sign-in-input {
@@ -232,6 +245,19 @@ blockquote, q {
     -webkit-box-shadow: none;
     box-shadow: none;
   }
+
+  .lost-input {
+    width: 100%;
+    height: 50px;
+    margin-bottom: 25px;
+    padding: 0 15px 2px;
+    font-size: 17px;
+    background: white;
+    border: 2px solid #05d4f8;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 -2px #ebebeb;
+    box-shadow: inset 0 -2px #ebebeb;
+  }
   
   /* :-moz-placeholder {
     color: #ccc;
@@ -257,4 +283,4 @@ blockquote, q {
   ::-moz-focus-inner {
     border: 0;
     padding: 0;
-  } */
+} */
